--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
     <h1>Drum Machine</h1>
     <!-- Root Component to attach React tree to -->
     <div id="root"></div>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
